# delphi-language-server

./: .gitignore  LICENSE  README.md
delphi-language-server/: Cargo.toml  build.rs
delphi-language-server/src/: main.rs
delphi-language-server/src/lsp/: analyzer.rs  mod.rs  parser.rs  server.rs
delphi-language-server/test/: ObjectPascalExample.pas
tree-sitter-pascal/: Cargo.toml
tree-sitter-pascal/src/: lib.rs
vscode-extension/: CHANGELOG.md  README.md  package-lock.json  package.json
vscode-extension/src/: extension.ts
vscode-extension/src/test/suite/: index.ts
